# awsCloudwatchLogGrabbing

./: .gitignore  README.md  pyproject.toml
script/: main.py
