[tool.poetry]
name = "aws-log"
version = "0.1.0"
description = ""
authors = ["Roland-Shum <roland.shum@rookqs.com>"]
readme = "README.md"
packages = [{include = "script"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.95"
argparse = "^1.4.0"

[tool.poetry.scripts]
aws-log = "script.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
